// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`positionToRadius default 15° 1`] = `
Array [
  62.940952255126035,
  1.7037086855465873,
]
`;

exports[`positionToRadius default 15° middle 1`] = `
Array [
  62.940952255126035,
  1.7037086855465873,
]
`;

exports[`positionToRadius default 30° 1`] = `
Array [
  75,
  6.698729810778069,
]
`;

exports[`positionToRadius default 30°, translated 1`] = `
Array [
  65,
  16.69872981077807,
]
`;

exports[`positionToRadius default 30°, translated, different radius 1`] = `
Array [
  50,
  42.67949192431123,
]
`;

exports[`positionToRadius different base, 30° 1`] = `
Array [
  22.679491924311225,
  50,
]
`;
